--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,6 @@ DISALLOW_ROBOTS=true
 
 # Read about Gatsby preview + build hooks:
 # -> https://www.gatsbyjs.com/docs/reference/cloud/build-and-preview-webhooks/
-GATSBY_PREVIEW_TARGET="@web:8000/__refresh"
-# GATSBY_BUILD_TARGET="https://webhook.gatsbyjs.com/hooks/data_source/publish/site-id"
+GATSBY_REFRESH_URL="https://starter-blog.ddev.site:8000/__refresh"
+GATSBY_PREVIEW_URL="https://starter-blog.ddev.site:8000"
+GATSBY_BUILD_TARGET="https://webhook.gatsbyjs.com/hooks/data_source/publish/site-id"
