--- a/headless-front-end/gatsby/.env.example
+++ b/headless-front-end/gatsby/.env.example
@@ -1,5 +1,5 @@
-CRAFTGQL_TOKEN = 1CFHS57JCTtYwQk0_2J-lD8dU3ACIfNU
-CRAFTGQL_URL = https://starter-blog.ddev.site/api
+CRAFTGQL_TOKEN="TEST-GRAPHQL-TOKEN"
+CRAFTGQL_URL="https://starter-blog.ddev.site/api"
 
 # uncomment the next line if you’ve configured live preview
 # ENABLE_GATSBY_REFRESH_ENDPOINT = true
