--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read
 jobs:
   test:
-    name: Gatsby + Craft with PHP ${{ matrix.php-versions }} + ${{ matrix.db }}
+    name: Craft on PHP ${{ matrix.php-versions }} + ${{ matrix.db }}
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
@@ -76,20 +76,10 @@ jobs:
       - name: Set Craft writable folder permissions
         run: chmod -R 777 config storage web/cpresources
 
+      # This project is used for schema introspection, so we do need to know that the API is healthy:
       - name: Ping GraphQL endpoint
         run: |-
           curl -s -X POST -H "Content-Type: application/json" --data '{ "query": "{ ping }" }' http://nginx/api
-
-      - name: Prepare Gatsby environment
-        run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
-
-      - name: Install Gatsby dependencies
-        run: npm install && npm install gatsby-cli
-        working-directory: headless-front-end/gatsby
-
-      - name: Build Gatsby site
-        run: npm run build
-        working-directory: headless-front-end/gatsby
 
       - name: Upload Craft logs
         uses: actions/upload-artifact@v2
