--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1708620591
+dateModified: 1708643213
 email:
   fromEmail: support@craftcms.com
   fromName: 'Craft Blog'
@@ -72,7 +72,9 @@ system:
 users:
   allowPublicRegistration: false
   deactivateByDefault: false
-  defaultGroup: null
-  photoSubpath: ''
+  defaultGroup: ''
+  photoSubpath: null
   photoVolumeUid: null
+  require2fa: all
   requireEmailVerification: true
+  validateOnPublicRegistration: false
