--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,12 @@
   "type": "project",
   "license": "0BSD",
   "require": {
-    "craftcms/cms": "^5.0.0-beta.1",
-    "craftcms/gatsby-helper": "v3.x-dev",
-    "craftcms/ckeditor": "^4.0.0-beta.1",
-    "nystudio107/craft-twigpack": "v5.x-dev",
+    "craftcms/cms": "^5.0.0",
+    "craftcms/gatsby-helper": "^2.0.0",
+    "craftcms/ckeditor": "^4.0.0",
+    "nystudio107/craft-twigpack": "^5.0.0",
     "vlucas/phpdotenv": "^5.4.0"
   },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "modules\\": "modules/"
@@ -35,11 +33,5 @@
     "post-install-cmd": [
       "@php craft clear-caches/all"
     ]
-  },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/craftcms/craft-twigpack"
-    }
-  ]
+  }
 }
