--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1744932129
+dateModified: 1744932373
 email:
   fromEmail: support@craftcms.com
   fromName: 'Craft Blog'
@@ -36,7 +36,7 @@ meta:
     a6ca7d80-fa7f-433b-b6ba-fd9f19791f82: Style # Style
     a6f02aa5-ab37-46e2-bbd4-3b56930577d5: Images # Images
     a121b8e6-70e6-421b-9629-c664d2949934: Quote # Quote
-    bb6d289b-c3cf-4a8d-9324-b98cbd32753b: Blog # Blog
+    bb6d289b-c3cf-4a8d-9324-b98cbd32753b: Post # Post
     cdd377e5-a451-46b0-ae80-bc4cee907d3e: Caption # Caption
     db2dff45-19b4-479c-8cba-ab88e7e7d2fd: Blog # Blog
     db95de40-4dec-44cc-9d17-bba2223c91cf: 'Image Alt' # Image Alt
