--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1744932844
+dateModified: 1745007533
 email:
   fromEmail: support@craftcms.com
   fromName: 'Craft Blog'
@@ -20,20 +20,18 @@ meta:
     5e76b2e3-1eae-4bbc-93f4-122fe4526b02: Summary # Summary
     5fd465cf-5b00-4b4f-8ee0-ce0eac4fd2eb: Attribution # Attribution
     6b203fd7-eca1-4313-8795-efbb5f6a8e63: Image # Image
-    7e2c012d-f507-4762-86e3-9b0ddc400c1f: 'Simple 2' # Simple 2
     7e401ee6-3575-42de-b3b4-cedae706f392: 'Image Carousel' # Image Carousel
     09c265f3-2ab1-405d-9111-108e6b54f0fb: 'Quote Text' # Quote Text
     28d5c036-8cb0-4a14-b553-0167ee34efbe: Image # Image
     031e8547-9981-4367-ad27-178240517ea1: 'Site Introduction' # Site Introduction
     55cd92b3-363e-4573-ad2c-04650483ba64: Gatsby # Gatsby
-    69e08c2b-0771-4f37-b3ab-b01ae9535ee0: Default # Default
     90dee5cc-23f1-40ac-ae14-3fa71bebc4dc: 'Craft Blog' # Craft Blog
     101a70a1-d200-4629-91e5-3425a0937c0e: Uploads # Uploads
     265d76a5-d5a9-4c82-bee4-2f8450aacd0a: 'Public Schema' # Public Schema
     913a6b8c-fba7-4a5c-9615-496e1bec6467: Standard # Standard
     8518a799-a012-4a6c-aa89-6a347cc00c2e: Home # Home
     4593234a-cdd0-4c54-9931-4eb606b9e7f5: Home # Home
-    a6ca7d80-fa7f-433b-b6ba-fd9f19791f82: 'Display Style' # Display Style
+    a6ca7d80-fa7f-433b-b6ba-fd9f19791f82: Style # Style
     a6f02aa5-ab37-46e2-bbd4-3b56930577d5: Images # Images
     a121b8e6-70e6-421b-9629-c664d2949934: Quote # Quote
     bb6d289b-c3cf-4a8d-9324-b98cbd32753b: Post # Post
