--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,11 @@
 {
   "name": "craftcms/starter-blog",
-  "description": "A Craft CMS blog site starter with Tailwind CSS",
+  "description": "A Craft CMS blog site starter kit",
   "type": "project",
   "license": "0BSD",
   "require": {
-    "clubstudioltd/craft-asset-rev": "^7.0.0",
     "craftcms/cms": "^4.5.4",
-    "craftcms/gatsby-helper": "^2.0.0",
     "craftcms/redactor": "^3.0.0",
-    "nystudio107/craft-typogrify": "^4.0.0",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "autoload": {
